force-app/main/default/objects/Trade__c/fields/BuyAmount__c.field-meta.xml
<CustomField>
    <fullName>BuyAmount__c</fullName>
    <label>Buy Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>