force-app/main/default/objects/Trade__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <description>Unique auto-generated Exchange Trade Identifier</description>
    <inlineHelpText>Unique auto-generated Exchange Trade Identifier</inlineHelpText>
    <label>ID</label>
    <length>9</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>