force-app/main/default/objects/Trade__c/fields/SellAmount__c.field-meta.xml
<CustomField>
    <fullName>SellAmount__c</fullName>
    <label>Sell Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>