force-app/main/default/objects/Trade__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ID__c</columns>
    <columns>SellCurrency__c</columns>
    <columns>SellAmount__c</columns>
    <columns>BuyCurrency__c</columns>
    <columns>BuyAmount__c</columns>
    <columns>Rate__c</columns>
    <columns>DateBooked__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>